[gd_scene load_steps=4 format=3 uid="uid://cj8p4yvqm5xng"]

[ext_resource type="Script" path="res://scenes/ui/FinalFeedbackForm.gd" id="1"]
[ext_resource type="Theme" path="res://assets/themes/wedding_theme.tres" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.05, 0.05, 0.95)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="FinalFeedbackForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="VBox" type="VBoxContainer" parent="Background/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
text = "Wedding Game Feedback Form"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
text = "Thank you for playing! Your feedback helps us improve the game."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="Background/ScrollContainer/VBox"]
layout_mode = 2

[node name="OverallRatingLabel" type="Label" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
text = "Overall Game Rating:"

[node name="OverallRating" type="HBoxContainer" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="Star1" type="Button" parent="Background/ScrollContainer/VBox/OverallRating"]
layout_mode = 2
text = "⭐"

[node name="Star2" type="Button" parent="Background/ScrollContainer/VBox/OverallRating"]
layout_mode = 2
text = "⭐"

[node name="Star3" type="Button" parent="Background/ScrollContainer/VBox/OverallRating"]
layout_mode = 2
text = "⭐"

[node name="Star4" type="Button" parent="Background/ScrollContainer/VBox/OverallRating"]
layout_mode = 2
text = "⭐"

[node name="Star5" type="Button" parent="Background/ScrollContainer/VBox/OverallRating"]
layout_mode = 2
text = "⭐"

[node name="HSeparator2" type="HSeparator" parent="Background/ScrollContainer/VBox"]
layout_mode = 2

[node name="FavoritePartLabel" type="Label" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
text = "What was your favorite part of the game?"

[node name="FavoritePartInput" type="TextEdit" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
placeholder_text = "Tell us what you enjoyed most..."

[node name="ImprovementLabel" type="Label" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
text = "What could be improved?"

[node name="ImprovementInput" type="TextEdit" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
placeholder_text = "Any suggestions for improvement..."

[node name="RecommendLabel" type="Label" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
text = "Would you recommend this game to friends?"

[node name="RecommendChoice" type="OptionButton" parent="Background/ScrollContainer/VBox"]
layout_mode = 2

[node name="TechnicalIssuesLabel" type="Label" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
text = "Did you encounter any technical issues or bugs?"

[node name="TechnicalIssuesInput" type="TextEdit" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
placeholder_text = "Describe any bugs or technical problems..."

[node name="HSeparator3" type="HSeparator" parent="Background/ScrollContainer/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Background/ScrollContainer/VBox"]
layout_mode = 2
alignment = 1

[node name="ExportButton" type="Button" parent="Background/ScrollContainer/VBox/Buttons"]
layout_mode = 2
text = "Export Data"

[node name="SubmitButton" type="Button" parent="Background/ScrollContainer/VBox/Buttons"]
layout_mode = 2
text = "Submit & Close"